--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle*
+/.bundle
+bundle.js
+bundle.js.map
 
 # Ignore all logfiles and tempfiles.
 /log/*
